shared_library(
    'dsound',
    include_directories: include_directories('.'),
    vs_module_defs: 'dsound.def',
    name_prefix: '',
    sources: [
        'ds-api.c',
        'ds-buffer.c',
        'ds-buffer.h',
        'ds-buffer-pri.c',
        'ds-buffer-pri.h',
        'guid.c',
        'hr.c',
        'hr.h',
        'list.c',
        'list.h',
        'queue.c',
        'queue.h',
        'snd-buffer.c',
        'snd-buffer.h',
        'snd-mixer.c',
        'snd-mixer.h',
        'snd-service.c',
        'snd-service.h',
        'snd-stream.c',
        'snd-stream.h',
        'refcount.c',
        'refcount.h',
        'trace.c',
        'trace.h',
        'wasapi.c',
        'wasapi.h',
    ],
    dependencies: [
        lib_avrt,
    ],
)
